name: compact-mutable
version: 0.1
synopsis: Mutable arrays living on the compact heap
homepage: https://github.com/andrewthad/compact-mutable#readme
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2017 Andrew Martin
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Data.Primitive.Compact
  build-depends:
      base >= 4.9 && < 5
    , primitive >= 0.6 && < 0.7
    , ghc-prim >= 0.5 && < 0.6
    , ghc-compact
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/andrewthad/compact-mutable
